Feat: 검증 Filter를 사용하여 Jwt를 통한 로그인 기능 구현
기존에는 controller에서 비교 -> security를 이용해 필터단에서 비교 후, jwt 발급

issue: #5

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,10 @@ spring:
     open-in-view: false
 
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
+
+  main:
+    allow-circular-references: true
 
 jwt:
   token:
