--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 	// DB
-	runtimeOnly 'com.mysql.cj.jdbc.Driver'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'com.h2database:h2'
 
 	// JWT
