--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     open-in-view: false
 
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
   main:
     allow-circular-references: true
